--- a/MainMenu/app/src/main/res/layout/ruluser.xml
+++ b/MainMenu/app/src/main/res/layout/ruluser.xml
@@ -54,21 +54,22 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#ffffff"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.4"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.25"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintVertical_bias="0.25">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
         </RelativeLayout>
 
         <TextView
@@ -104,6 +105,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </RelativeLayout>
+
+        <Spinner
+            android:id="@+id/RoleSpn"
+            android:layout_width="77dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.971"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.071" />
 
     </android.support.constraint.ConstraintLayout>
 
